# oreo

./: Cargo.toml  README.md
benches/: parsing.rs
src/: common.rs  error.rs  lexical.rs  lib.rs  node_builder.rs  nodebuilder.rs  parser.rs  parsing_utils.rs  range.rs  scanner.rs  syntax.rs  token_stream.rs  tokens.rs  tree_utils.rs  untyped.rs  validator.rs
src/ast/: mod.rs  node_db.rs  scope_resolution.rs  symbol.rs  syntax.rs  types.rs  untyped.rs
src/bin_d/: lexer.rs  stress.rs
src/codegen/: mod.rs  tac.rs
src/lexer/: error.rs  mod.rs  scanner.rs  token_stream.rs  tokens.rs
src/parser/: consts.rs  error.rs  mod.rs  node_builder.rs
src/snapshots/: tests__example.snap  tests__lex_example.snap  tests__lex_functions.snap  tests__lex_real_life.snap  tests__parse_bool_expr_edge.snap  tests__parse_condition.snap  tests__parse_condition_nested.snap  tests__parse_empty.snap  tests__parse_full.snap  tests__parse_fun_call.snap  tests__parse_function_mult_arg.snap  tests__parse_function_multiple_arg_call.snap  tests__parse_function_no_arg_call.snap  tests__parse_function_no_args.snap  tests__parse_function_single_arg.snap  tests__parse_function_single_arg_call.snap  tests__parse_invalid.snap  tests__parse_minimal_assignments.snap  tests__parse_minimal_no_bool_no_expr.snap  tests__parse_minimal_string_assign.snap  tests__parse_oreo_1.snap  tests__parse_oreo_10.snap  tests__parse_oreo_2.snap  tests__parse_oreo_3.snap  tests__parse_oreo_4.snap  tests__parse_oreo_5.snap  tests__parse_oreo_6.snap  tests__parse_oreo_7.snap  tests__parse_oreo_8.snap  tests__parse_oreo_9.snap  (+18 more)
(+91 files in other folders)
