[package]
name = "oreo"
version = "0.1.0"
authors = ["Giacomo Fenzi <giacomofenzi@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
structopt = "0.3.2"
serde_json = "1.0"
serde_yaml = "0.8"
serde = "1.0"

[dev-dependencies]
insta = "0.11.0"
